<resources>
    <string name="app_name">KKPay</string>
    <string name="Channel_Id">消息</string>
    <string name="Channel_Name">重要通知</string>
    <string name="Channel_Description">接收重要通知,建议开启</string>
    <string name="no_content">暂无数据</string>
    <string name="no_network">网络不给力，刷新页面试试</string>
    <string name="toast_common_system_net_stablize">网络不稳定，请稍后再试</string>
    <string name="toast_common_not_connect_server">无法链接服务器，请联系客服</string>
    <string name="toast_next_press_exit">再按一次退出</string>
    <string name="reload_button">刷新一下</string>
    <string name="StatusDialog_Open">维护升级中</string>
    <string name="StatusDialog_Time">维护时间</string>
    <string name="StatusDialog_Content">维护内容</string>
    <string name="msgnoticedialog_MoreAnnouncements">更多公告</string>
    <string name="noticedialog_DoNotRemindMeToday">今日不再提醒</string>
    <string name="addbankactivity_ReceivingQRCode_tip">仅支持jpg、png格式图片，图片大小在1MB之内</string>
    <string name="QrPhoto_Error_Tip">无效二维码</string>
    <string name="add_photo">添加照片</string>
    <string name="open_photo">相册</string>
    <string name="open_camera">拍摄</string>
    <string name="Financial_security_Verified_tip">为保证您的账户安全，请先完成实名认证</string>
    <string name="wallet_add_pay_tip">*请录入本人真实信息，否则造成的一切损失，由会员自行承担，平台不负担任何责任。</string>
    <string name="wallet_add_tip">收款码需要审核通过后,才可用于提款</string>
    <string name="wallet_Unbind">是否删除该</string>
    <string name="System_copytext_Success">复制成功</string>
    <string name="System_Revise_Success">修改成功</string>
    <string name="order_Revoke_Success">撤单成功</string>
    <string name="order_Buy_Success">购买成功</string>
    <string name="home_first_verified">请先实名</string>
    <string name="verify_dialog_title">身份认证</string>
    <string name="verify_dialog_title_tip">请先进行实名认证</string>
    <string name="add_pay_dialog_title">添加收付款信息</string>
    <string name="please_input_password_tip">请输入支付密码</string>
    <string name="please_input_passw_finish_tip">请输入完整密码</string>
    <string name="add_pay_dialog_title_tip">请先添加收付款信息</string>
    <string name="buy_coin_correspind_paytype_tip">请添加对应支付方式</string>
    <string name="please_buyjia_upload_pay_pingzeng_tip">请先上传支付凭证</string>
    <string name="Not_buy_me_order_tip">不能购买自己的订单</string>
    <string name="sell_money_cannot_less_ten_tip">挂单金额不能低于10KKG</string>
    <string name="webviewfragment_DialogBox">对话框</string>
    <string name="Open_Notice_Title">通知设置</string>
    <string name="Open_First_Notice_Content_one">将跳转设置页面</string>
    <string name="Open_First_Notice_Content_two">请开启悬浮通知,声音,震动等开关.</string>
    <string name="Open_First_Notice_Content_thr">(进入我的-设置页面-通知管理修改)</string>
    <string name="Share_Error">异常</string>
    <string name="Share_Save_Success">保存成功</string>
    <string name="Share_Save_Error">异常,请截图保存</string>
    <string name="Share_Data_Error">数据异常</string>
    <string name="Wechat_name">微信</string>
    <string name="Alipay_name">支付宝</string>
    <string name="Bank_name">银行卡</string>
    <string name="Rationale_Canera_title">相机权限申请</string>
    <string name="Rationale_Canera_Msg">请开启相机权限</string>
    <string name="Rationale_Audio_Canera_title">麦克风/相机权限申请</string>
    <string name="Rationale_Audio_Canera_Msg">请开启麦克风/相机权限</string>
    <string name="goTo_Setting_tip">跳转设置</string>
    <string name="dialog_coin_content_tip">请您核实是否收到买家的转账,一旦放币将无法追回,确定收到买家的转账再放币。</string>
    <string name="dialog_coin_cancel_content_one_tip">多次取消会导致被列为风险账号,</string>
    <string name="dialog_coin_cancel_content_two_tip">是否确认取消订单</string>
    <string name="buy_dialog_tip_title">买家须知</string>
    <string name="buy_dialog_tip_one">1.需要用您绑定的付款信息给卖家付款,如付款信息不符,卖家有权利不给您打币。</string>
    <string name="buy_dialog_tip_two">2.如果交易中双方发生纠纷,请点击右上角交易纠纷申请客服接入处理。</string>
    <string name="buy_dialog_tip_thr">3.用户连续5次违反平台交易规则，如：用户取消交易、卖家10分钟内不确认交易、卖家20分钟内未打币、买家20分钟内不转账；会被列为风险账号，24小时禁止交易。</string>
    <string name="buy_dialog_tip_four">4.买家恶意上传虚假付款信息,查证属实会永久封停账号。</string>
    <string name="sell_dialog_tip_title">卖家须知</string>
    <string name="sell_dialog_tip_one">1.请检查是否收到此款项,若没有收到,请点击⌈暂停打币⌋,并且点击右上角⌈交易纠纷⌋处理,若收到,请尽快点击⌈确认打币⌋,多次不点击确认打币,经查实,将被列为风险账号。</string>
    <string name="sell_dialog_tip_two">2.收到的款项如与买家购买的信息上的付款信息不一致,卖家有权不打币。</string>
    <string name="sell_dialog_tip_thr">3.如有收到此款项,恶意点击暂停打币,经查实,将永久封号。</string>
    <string name="sell_dialog_tip_four">4.用户连续5次违反平台交易规则，如：用户取消交易、卖家10分钟内不确认交易、卖家20分钟内未打币、买家20分钟内不转账；会被列为风险账号，24小时禁止交易。</string>
    <string name="addsh_addsh_text_tip_one">该商户不在您的商户通讯录中，</string>
    <string name="addsh_addsh_text_tip_two">是否添加</string>
    <string name="addsh_addwj_text_tip_one">该玩家不在您的玩家通讯录中，</string>
    <string name="addsh_addwj_text_tip_two">是否添加</string>
    <string name="addsh_addsh_success_tip">添加商户成功</string>
    <string name="addsh_addwj_success_tip">添加玩家账号成功</string>
    <string name="data_Monday">周一</string>
    <string name="data_Sunday">周日</string>
    <string name="data_Tuesday">周二</string>
    <string name="data_Wednesday">周三</string>
    <string name="data_Thursday">周四</string>
    <string name="data_Friday">周五</string>
    <string name="data_Saturday">周六</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="Share_cancel">取消</string>
    <string name="Share_reset">重置</string>
    <string name="Share_cancel_order">取消交易</string>
    <string name="Share_submit">提交</string>
    <string name="Share_certain">确定</string>
    <string name="allow">允许</string>
    <string name="reject">拒绝</string>
    <string name="Share_certain_order">确定交易</string>
    <string name="Share_add">添加</string>
    <string name="Share_save">保存</string>
    <string name="Share_finish">完成</string>
    <string name="Share_Feedback">意见反馈</string>
    <string name="Share_MyFeedback">我的反馈</string>
    <string name="Share_Feedback_Detail">反馈详情</string>
    <string name="Share_VerifyNew">实名认证</string>
    <string name="Share_Now_VerifyNew">立即认证</string>
    <string name="Share_Now_Add">立即添加</string>
    <string name="Share_dialog_title">对话框</string>
    <string name="Share_delete">删除</string>
    <string name="Share_delete_Merchant">删除商户</string>
    <string name="Share_Nickname">昵称</string>
    <string name="Share_name">名字</string>
    <string name="Share_next_step">下一步</string>
    <string name="Share_open_face">开始录制</string>
    <string name="Share_again_face">重新审核</string>
    <string name="Share_lookall">查看全部</string>
    <string name="Share_bank_no">卡号</string>
    <string name="Share_Account">账号</string>
    <string name="Share_URL">网址</string>
    <string name="Share_tip">提示</string>
    <string name="Share_Buy">购买</string>
    <string name="Share_Sell">出售</string>
    <string name="Share_Revoke">撤销</string>
    <string name="Share_Total">总数</string>
    <string name="Share_Reload">刷新</string>
    <string name="Share_certain_coin">确定打币</string>
    <string name="Share_pasue_coin">暂停打币</string>
    <string name="Share_Pay_Qrcode">付款码</string>
    <string name="Share_bank">银行</string>
    <string name="Share_Operate_Success">操作成功</string>
    <string name="Share_Operate_Frequently">操作频繁</string>
    <string name="Share_Notified_Success">已成功通知对方</string>
    <string name="Share_Pay">支付</string>
    <string name="Share_Close">关闭</string>
    <string name="Share_Important_Reminder">重要提醒</string>
    <string name="Share_Resend">重新发送</string>
    <string name="Share_JumpIoOver">跳过</string>
    <string name="Share_GoJoin">进入</string>
    <string name="Share_Manage">管理</string>
    <string name="Share_MoreUrl"><u>网址</u></string>
    <string name="Share_or">或</string>
    <string name="Share_Avatar">头像</string>
    <string name="Share_Recent">最近</string>
    <string name="Share_All">全部</string>
    <string name="Share_WjAccount">玩家账号</string>
    <string name="Share_delSh_Success">移除商户成功</string>
    <string name="Share_delWj_Success">移除玩家成功</string>
    <string name="include_phoneNumber">手机号码</string>
    <string name="include_phoneNumber_tip">请输入11位手机号码</string>
    <string name="include_VerificationCode">请输入验证码</string>
    <string name="include_VerificationCode_tip">请输入手机验证码</string>
    <string name="include_getVerificationCode">获取验证码</string>
    <string name="loginactivity_RememberPassword">记住密码</string>
    <string name="Share_Contact_Customer_Service">联系客服</string>
    <string name="load_all_data">没有更多了</string>
    <string name="load_up_more_data">上拉加载更多</string>
    <string name="load_dowm_more_data">松开立即加载</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_guadan">挂单</string>
    <string name="main_tab_service">客服</string>
    <string name="main_tab_order">订单</string>
    <string name="main_tab_mine">我的</string>
    <string name="setting_title">设置</string>
    <string name="verifynew_title">个人资料</string>
    <string name="webviewa_title">webView页面</string>
    <string name="Scan_Detail_title">我的订单</string>
    <string name="service_ttitle">我的客服</string>
    <string name="Tips">温馨提示</string>
    <string name="deposit_success_tip">存款成功</string>
    <string name="editor_user_title">编辑用户信息</string>
    <string name="ZZImageAdCache">kk/Cache/Images/Ad</string>
    <string name="ZZFileCache">apk</string>
    <string name="ZZImageCache">kk/Cache/Images</string>
    <string name="ZZNetWorkCache">kk/Cache/NetWork</string>
    <string name="ZZRootCache">kk/Cache</string>
    <string name="input_type_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="add_ali_bank_account_type_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.</string>
    <string name="startactivity_StartPage">启动页</string>
    <string name="startactivity_StartAdPage">启动广告页</string>
    <string name="token_out">未登录或登录超时。请重新登录</string>
    <string name="toast_common_system_net_error">网络不可用，请稍后再试</string>
    <string name="app_Currentversion">当前版本</string>
    <string name="app_version">版本号</string>
    <string name="UpdateDialog_Content">更新内容</string>
    <string name="UpdateDialog_NowUpData">立即更新</string>
    <string name="UpdateDialog_TellLater">以后再说</string>
    <string name="UpdateDialog_BackgroundUpdate">后台更新</string>
    <string name="UpdateDialog_DownloadPaused">下载暂停</string>
    <string name="UpdateDialog_BrowserDownload">去浏览器下载</string>
    <string name="UpdateDialog_BrowserDownload_Fails">下载失败,是否去浏览器下载</string>
    <string name="updata_dialog_servse_normal_text">如无法正常更新</string>
    <string name="updata_dialog_servse_intent_text">请点击此处官网下载 ></string>
    <string name="storage_jurisdiction">请允许内存卡储存权限</string>
    <string name="btn_certain">确定</string>
    <string name="setting_singout">退出登录</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_notify">通知设置</string>
    <string name="setting_notify_tip">(订单悬浮通知,声音,震动等设置)</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="login_edit_input_phone">请输入手机号</string>
    <string name="login_edit_input_pass">请输入密码</string>
    <string name="login_online_service">在线客服</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="Order_detail_buyjia_upload_payzm_tip">买家上传支付凭证</string>
    <string name="Order_detail_selljia_sell_paypz_tip">点击查看凭证</string>
    <string name="Order_detail_buyjia_buy_paypz_tip">查看凭证</string>
    <string name="depositsh_addwj_title_tip">添加玩家账号</string>
    <string name="depositsh_wj_empty_tip">玩家账号</string>
    <string name="addManagesh_input_wj_account_tip">请输入玩家账号</string>
    <string name="transfer_money_please_check_seller_payment_information">(转账时请核对卖家收款信息)</string>
</resources>