<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    tools:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_maijia_pingzheng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:visibility="gone"
        tools:visibility="visible">

        <!--        <TextView-->
        <!--            android:id="@+id/tv_buypayorder_tip"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="15dp"-->
        <!--            android:textColor="@color/order_details_payMoney_tip"-->
        <!--            android:textSize="12dp"-->
        <!--            tools:text="@string/Order_detail_buyjia_payMoney_tip" />-->

        <LinearLayout
            android:id="@+id/uploadPayinfo_LL"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape_press_order_topay_btn_press"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uploadPayinfo_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Order_detail_buyjia_upload_payzm_tip"
                android:textColor="@color/colorPrimary"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/transfer_money_please_check_seller_payment_information"
                android:textColor="@color/yellow1"
                android:textSize="10dp" />

        </LinearLayout>
        <!--        <Button-->
        <!--            android:id="@+id/btn_up_pay_pingzheng"-->
        <!--            android:layout_width="270dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginStart="50dp"-->
        <!--            android:layout_marginEnd="50dp"-->
        <!--            android:background="@drawable/shape_press_order_topay_btn_press"-->
        <!--            android:text="@string/Order_detail_buyjia_upload_payzm_tip"-->
        <!--            android:textColor="@color/colorPrimary"-->
        <!--            android:textSize="12dp" />-->

        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <FrameLayout
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_press_darkgrey_press"
                    android:text="@string/Share_cancel"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_press_darkgreen_press"
                    android:text="@string/Order_detail_buyjia_buy_paypz_tip"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:visibility="gone" />

            </FrameLayout>


            <Button
                android:id="@+id/btn_pay_yizhuanzhang"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/shape_press_blue_press"
                android:text="请点击,我已经转账"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cancel_ok_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:visibility="gone"
        tools:visibility="gone">

        <!--        <TextView-->
        <!--            android:id="@+id/tv_orderStart_tip"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:textColor="@color/order_details_payMoney_tip"-->
        <!--            android:textSize="12dp"-->
        <!--            tools:text="@string/Order_detail_selljia_order_tip" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_order"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/shape_press_red_press"
                android:text="@string/Share_cancel_order"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_ok_order"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginStart="11dp"
                android:background="@drawable/shape_press_blue_press"
                android:text="@string/Share_certain_order"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pause_or_topay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <Button
            android:id="@+id/btn_check_pingzheng"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_press_order_topay_btn_press"
            android:text="@string/Order_detail_selljia_sell_paypz_tip"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pasue_coin"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/shape_press_red_press"
                android:text="@string/Share_pasue_coin"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_certain_coin"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginStart="11dp"
                android:background="@drawable/shape_press_blue_press"
                android:text="@string/Share_certain_coin"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/icon_details_pay_tip"
            android:scaleType="fitXY" />

    </LinearLayout>


</FrameLayout>